--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-native": "^0.63.46",
     "@types/react-test-renderer": "^17.0.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
